Add kubernetes configuration.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,4 @@
-spring.profiles.active=dev
-
 # liquibase
 spring.liquibase.change-log=classpath:/liquibase/changelog/changelog-master.xml
 
-# PostgreSQL
-spring.datasource.url=jdbc:postgresql://localhost:5432/orderdb
-spring.datasource.username=postgresuser
-spring.datasource.password=postgrespw
+#spring.jpa.open-in-view=false
