--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,11 +1,18 @@
-version: "3.7"
+version: '3.8'
+
 services:
   postgres:
-    image: debezium/postgres:13
-    ports:
-      - 5432:5432
+    image: postgres:latest
+    container_name: postgres
     environment:
-      - POSTGRES_USER=postgresuser
-      - POSTGRES_PASSWORD=postgrespw
-      - POSTGRES_DB=orderdb
-      - PGPASSWORD=postgrespw
+      POSTGRES_USER: postgresuser
+      POSTGRES_PASSWORD: postgrespw
+      POSTGRES_DB: orderdb
+      PGPASSWORD: postgrespw
+    ports:
+      - "5432:5432"
+    volumes:
+      - postgres_data:/var/lib/postgresql/data
+
+volumes:
+  postgres_data:
