--- a/domain/pom.xml
+++ b/domain/pom.xml
@@ -20,6 +20,16 @@
 	</properties>
 	<dependencies>
 		<dependency>
+			<groupId>com.trendyol.training</groupId>
+			<artifactId>application</artifactId>
+			<version>1.0</version>
+		</dependency>
+		<dependency>
+			<groupId>com.trendyol.training</groupId>
+			<artifactId>infrastructure</artifactId>
+			<version>1.0</version>
+		</dependency>
+		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter</artifactId>
 		</dependency>
