--- a/application/pom.xml
+++ b/application/pom.xml
@@ -26,15 +26,14 @@
 			<version>1.0</version>
 		</dependency>
 		<dependency>
-			<groupId>com.trendyol.training</groupId>
-			<artifactId>infrastructure</artifactId>
-			<version>1.0</version>
-		</dependency>
-		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter</artifactId>
 		</dependency>
-
+		<dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+			<optional>true</optional>
+		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
