--- a/domain/pom.xml
+++ b/domain/pom.xml
@@ -20,18 +20,12 @@
 	</properties>
 	<dependencies>
 		<dependency>
-			<groupId>com.trendyol.training</groupId>
-			<artifactId>application</artifactId>
-			<version>1.0</version>
-		</dependency>
-		<dependency>
-			<groupId>com.trendyol.training</groupId>
-			<artifactId>infrastructure</artifactId>
-			<version>1.0</version>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter</artifactId>
+			<artifactId>spring-boot-starter-validation</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>org.projectlombok</groupId>
